--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,46 @@
-# build output
-dist/
-# generated types
-.astro/
+# --- Node, Astro, and OS Best Practice .gitignore ---
+# Build output
+/dist/
+/.astro/
+/storybook-static/
 
-# dependencies
-node_modules/
+# Dependencies
+/node_modules/
 
-# logs
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+*storybook.log
 
-
-# environment variables
+# Environment variables
 .env
-.env.production
+.env.*
 
-# macOS-specific files
+# macOS system files
 .DS_Store
 
-# jetbrains setting folder
+# JetBrains IDEs
 .idea/
 
-*storybook.log
-storybook-static
+# VSCode settings
+.vscode/
+
+# Local history, system, and temp files
+*.swp
+*.swo
+*.tmp
+*.bak
+
+# OS generated files
+Thumbs.db
+Desktop.ini
+
+# Coverage reports
+coverage/
+
+# Misc
+*.log
+
+# --- End of .gitignore ---
